Styles + my-requests.js fix
Changed styles for root div and scrollbars look.

Fixed my-requests, every jwtRequest was performing get request.

--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,14 @@ body {
   width: 100vw;
   height: 100vh;
 }
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+::-webkit-scrollbar-thumb {
+  background-color: #ccc;
+  border-radius: 4px;
+}
+::-webkit-scrollbar-track {
+  background-color: #eee;
+}
